build system refactoring: two more simple plugins

--- a/trunk/plugins/about/CMakeLists.txt
+++ b/trunk/plugins/about/CMakeLists.txt
@@ -2,20 +2,15 @@
 # about library #
 #################
 
-SET(about_SRCS
-        about.cpp
-        aboutdlg.cpp
-)
+SET(about_PLATFORMS COMMON)
 
-SET(about_HDRS
-        about.h
-        aboutdlg.h
-)
 
-SET(about_UICS
-        aboutdlgbase.ui
-)
+SET(about_SRCS_COMMON about.cpp
+                      aboutdlg.cpp)
 
-SET(about_MESSAGE_SOURCES ${about_SRCS} ${about_UICS}  PARENT_SCOPE)
+SET(about_HDRS_COMMON about.h
+                      aboutdlg.h)
+
+SET(about_UICS_COMMON aboutdlgbase.ui)
 
 SIM_ADD_PLUGIN(about)
