Build system refactoring: some more plugins

--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -1,3 +1,21 @@
+####################
+# autoaway library #
+####################
+
+SET(autoaway_PLATFORMS COMMON WIN32)
+
+SET(autoaway_SRCS_COMMON autoaway.cpp
+                         autoawaycfg.cpp)
+SET(autoaway_SRCS_WIN32  idleui.cpp)
+
+
+SET(autoaway_HDRS_COMMON autoaway.h
+                         autoawaycfg.h)
+SET(autoaway_HDRS_WIN32  idleui.h)
+
+
+SET(autoaway_UICS_COMMON autoawaycfgbase.ui)
+
 IF(NOT WIN32)
     INCLUDE(CheckFunctionExists)
     INCLUDE(FindX11)
@@ -29,40 +47,12 @@ ELSE(NOT WIN32)
 ENDIF(NOT WIN32)
 
 IF(COMPILE_PLUGIN)
-    ####################
-    # autoaway library #
-    ####################
-    SET(autoaway_SRCS
-            autoaway.cpp
-            autoawaycfg.cpp
-    )
-
-    SET(autoaway_HDRS
-            autoaway.h
-            autoawaycfg.h
-    )
-
-    SET(autoaway_UICS
-            autoawaycfgbase.ui
-    )
-
-    IF(WIN32)
-        SET(autoaway_SRCS
-            ${autoaway_SRCS}
-            idleui.cpp
-        )
-        SET(autoaway_HDRS
-            ${autoaway_HDRS}
-            idleui.h
-        )
-    ENDIF(WIN32)
-
     LINK_DIRECTORIES(${X11_LIBRARY_DIR})
     INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
     SIM_ADD_PLUGIN(autoaway)
     TARGET_LINK_LIBRARIES(autoaway ${XSS_LIB})
 ELSE(COMPILE_PLUGIN)
     MESSAGE(STATUS "XScreenSaver library not found, autoaway plugin disabled")
+    SET(autoaway_PLUGIN_FORBIDDEN 1)
+    SIM_ADD_PLUGIN(autoaway) # for update-messages and make dist purposes
 ENDIF(COMPILE_PLUGIN)
- 
-SET(autoaway_MESSAGE_SOURCES autoaway.cpp  autoawaycfg.cpp  autoawaycfgbase.ui idleui.cpp PARENT_SCOPE)
