--- a/trunk/plugins/background/CMakeLists.txt
+++ b/trunk/plugins/background/CMakeLists.txt
@@ -1,20 +1,14 @@
 ######################
 # background library #
 ######################
-SET(background_SRCS
-        background.cpp
-        bkgndcfg.cpp
-)
+SET(background_PLATFORMS COMMON)
 
-SET(background_HDRS
-        background.h
-        bkgndcfg.h
-)
+SET(background_SRCS_COMMON background.cpp
+                           bkgndcfg.cpp)
 
-SET(background_UICS
-        bkgndcfgbase.ui
-)
+SET(background_HDRS_COMMON background.h
+                           bkgndcfg.h)
 
-SET(background_MESSAGE_SOURCES  ${background_SRCS}  ${background_UICS}  PARENT_SCOPE)
+SET(background_UICS_COMMON bkgndcfgbase.ui)
 
 SIM_ADD_PLUGIN(background)
