--- a/trunk/plugins/dock/CMakeLists.txt
+++ b/trunk/plugins/dock/CMakeLists.txt
@@ -1,22 +1,17 @@
 ################
 # dock library #
 ################
-SET(dock_SRCS
-        dock.cpp
-        dockcfg.cpp
-        dockwnd.cpp
-)
 
-SET(dock_HDRS
-        dock.h
-        dockcfg.h
-        dockwnd.h
-)
+SET(dock_PLATFORMS COMMON)
 
-SET(dock_UICS
-        dockcfgbase.ui
-)
+SET(dock_SRCS_COMMON dock.cpp
+                     dockcfg.cpp
+                     dockwnd.cpp)
 
-SET(dock_MESSAGE_SOURCES  ${dock_SRCS}  ${dock_UICS}  PARENT_SCOPE)
+SET(dock_HDRS_COMMON dock.h
+                     dockcfg.h
+                     dockwnd.h)
+
+SET(dock_UICS_COMMON dockcfgbase.ui)
 
 SIM_ADD_PLUGIN(dock)
