--- a/trunk/plugins/floaty/CMakeLists.txt
+++ b/trunk/plugins/floaty/CMakeLists.txt
@@ -1,16 +1,12 @@
 ##################
 # floaty library #
 ##################
-SET(floaty_SRCS
-        floaty.cpp
-        floatywnd.cpp
-)
+SET(floaty_PLATFORMS COMMON)
 
-SET(floaty_HDRS
-        floaty.h
-        floatywnd.h
-)
+SET(floaty_SRCS_COMMON floaty.cpp
+                       floatywnd.cpp)
 
-SET(floaty_MESSAGE_SOURCES  ${floaty_SRCS}  PARENT_SCOPE)
+SET(floaty_HDRS_COMMON floaty.h
+                       floatywnd.h)
 
 SIM_ADD_PLUGIN(floaty)
