--- a/trunk/plugins/filter/CMakeLists.txt
+++ b/trunk/plugins/filter/CMakeLists.txt
@@ -1,23 +1,18 @@
 ##################
 # filter library #
 ##################
-SET(filter_SRCS
-        filter.cpp
-        filtercfg.cpp
-        ignorelist.cpp
-)
 
-SET(filter_HDRS
-        filter.h
-        filtercfg.h
-        ignorelist.h
-)
+SET(filter_PLATFORMS COMMON)
 
-SET(filter_UICS
-        filtercfgbase.ui
-        ignorelistbase.ui
-)
+SET(filter_SRCS_COMMON filter.cpp
+                       filtercfg.cpp
+                       ignorelist.cpp)
 
-SET(filter_MESSAGE_SOURCES  ${filter_SRCS}  ${filter_UICS}  PARENT_SCOPE)
+SET(filter_HDRS_COMMON filter.h
+                       filtercfg.h
+                       ignorelist.h)
+
+SET(filter_UICS_COMMON filtercfgbase.ui
+                       ignorelistbase.ui)
 
 SIM_ADD_PLUGIN(filter)
