--- a/trunk/plugins/icons/CMakeLists.txt
+++ b/trunk/plugins/icons/CMakeLists.txt
@@ -1,20 +1,16 @@
 #################
 # icons library #
 #################
-SET(icons_SRCS
-        icon.cpp
-        iconcfg.cpp
-)
 
-SET(icons_HDRS
-        icon.h
-        iconcfg.h
-)
+SET(icons_PLATFORMS COMMON)
 
-SET(icons_UICS
-        iconcfgbase.ui
-)
+SET(icons_SRCS_COMMON icon.cpp
+                      iconcfg.cpp)
 
-SET(icons_MESSAGE_SOURCES  ${icons_SRCS}  ${icons_UICS}  PARENT_SCOPE)
+SET(icons_HDRS_COMMON icon.h
+                      iconcfg.h)
+
+SET(icons_UICS_COMMON iconcfgbase.ui)
+
 
 SIM_ADD_PLUGIN(icons)
