--- a/trunk/plugins/msn/CMakeLists.txt
+++ b/trunk/plugins/msn/CMakeLists.txt
@@ -1,33 +1,28 @@
 ###############
 # msn library #
 ###############
-SET(msn_SRCS
-        msn.cpp
-        msnclient.cpp
-        msnconfig.cpp
-        msnfiletransfer.cpp
-        msnhttp.cpp
-        msninfo.cpp
-        msnpacket.cpp
-        msnsearch.cpp
-)
 
-SET(msn_HDRS
-        msn.h
-        msnclient.h
-        msnconfig.h
-        msnhttp.h
-        msninfo.h
-        msnpacket.h
-        msnsearch.h
-)
+SET(msn_PLATFORMS COMMON)
 
-SET(msn_UICS
-        msnconfigbase.ui
-        msninfobase.ui
-        msnsearchbase.ui
-)
+SET(msn_SRCS_COMMON msn.cpp
+                    msnclient.cpp
+                    msnconfig.cpp
+                    msnfiletransfer.cpp
+                    msnhttp.cpp
+                    msninfo.cpp
+                    msnpacket.cpp
+                    msnsearch.cpp)
 
-SET(msn_MESSAGE_SOURCES  ${msn_SRCS}  ${msn_UICS}  PARENT_SCOPE)
+SET(msn_HDRS_COMMON msn.h
+                    msnclient.h
+                    msnconfig.h
+                    msnhttp.h
+                    msninfo.h
+                    msnpacket.h
+                    msnsearch.h)
+
+SET(msn_UICS_COMMON msnconfigbase.ui
+                    msninfobase.ui
+                    msnsearchbase.ui)
 
 SIM_ADD_PLUGIN(msn)
