--- a/branches/branch-playground/plugins/_core/styles/CMakeLists.txt
+++ b/branches/branch-playground/plugins/_core/styles/CMakeLists.txt
@@ -6,7 +6,11 @@ IF(MSVC_IDE)
   FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/debug/styles)
   FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/release/styles)
 ELSE(MSVC_IDE)
-  FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/styles)
+  IF(APPLE)
+    FILE(MAKE_DIRECTORY ${SIM_STYLES_DIR})
+  ELSE(APPLE)
+    FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/styles)
+  ENDIF(APPLE)
 ENDIF(MSVC_IDE)
 
 FOREACH(FILE ${styles})
@@ -15,7 +19,11 @@ FOREACH(FILE ${styles})
     CONFIGURE_FILE(${FILE} ${CMAKE_BINARY_DIR}/debug/styles/${NAME} COPYONLY)
     CONFIGURE_FILE(${FILE} ${CMAKE_BINARY_DIR}/release/styles/${NAME} COPYONLY)
   ELSE(MSVC_IDE)
-    CONFIGURE_FILE(${FILE} ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/styles/${NAME} COPYONLY)
+    IF(APPLE)
+      CONFIGURE_FILE(${FILE} ${SIM_STYLES_DIR}/${NAME} COPYONLY)
+    ELSE(APPLE)
+      CONFIGURE_FILE(${FILE} ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/styles/${NAME} COPYONLY)
+    ENDIF(APPLE)
   ENDIF(MSVC_IDE)
 ENDFOREACH(FILE)
 
