Build system refactoring: now all plugins are in a new way now will work on adding media files to file make dist file list and adding other files that are not part of plugins there

--- a/trunk/plugins/replace/CMakeLists.txt
+++ b/trunk/plugins/replace/CMakeLists.txt
@@ -1,19 +1,15 @@
 ###################
 # replace library #
 ###################
-SET(replace_SRCS
-        replace.cpp
-        replacecfg.cpp
-)
 
-SET(replace_HDRS
-        replace.h
-        replacecfg.h
-)
+SET(replace_PLATFORMS COMMON)
 
-SET(replace_UICS
-        replacecfgbase.ui
-)
-SET(replace_MESSAGE_SOURCES  ${replace_SRCS}  ${replace_UICS}  PARENT_SCOPE)
+SET(replace_SRCS_COMMON replace.cpp
+                        replacecfg.cpp)
+
+SET(replace_HDRS_COMMON replace.h
+                        replacecfg.h)
+
+SET(replace_UICS_COMMON replacecfgbase.ui)
 
 SIM_ADD_PLUGIN(replace)
