--- a/trunk/plugins/shortcuts/CMakeLists.txt
+++ b/trunk/plugins/shortcuts/CMakeLists.txt
@@ -1,23 +1,18 @@
 #####################
 # shortcuts library #
 #####################
-SET(shortcuts_SRCS
-        mousecfg.cpp
-        shortcutcfg.cpp
-        shortcuts.cpp
-)
 
-SET(shortcuts_HDRS
-        mousecfg.h
-        shortcutcfg.h
-        shortcuts.h
-)
+SET(shortcuts_PLATFORMS COMMON)
 
-SET(shortcuts_UICS
-        mousecfgbase.ui
-        shortcutcfgbase.ui
-)
+SET(shortcuts_SRCS_COMMON mousecfg.cpp
+                          shortcutcfg.cpp
+                          shortcuts.cpp)
 
-SET(shortcuts_MESSAGE_SOURCES  ${shortcuts_SRCS}  ${shortcuts_UICS}  PARENT_SCOPE)
+SET(shortcuts_HDRS_COMMON mousecfg.h
+                          shortcutcfg.h
+                          shortcuts.h)
+
+SET(shortcuts_UICS_COMMON mousecfgbase.ui
+                          shortcutcfgbase.ui)
 
 SIM_ADD_PLUGIN(shortcuts)
