--- a/trunk/plugins/spell/CMakeLists.txt
+++ b/trunk/plugins/spell/CMakeLists.txt
@@ -1,38 +1,19 @@
-SET(spell_SRCS
-        spell.cpp
-        spellcfg.cpp
-        speller.cpp
-        spellhighlight.cpp
-)
+SET(spell_PLATFORMS COMMON WIN32)
 
-SET(spell_UICS
-        spellcfgbase.ui
-        spellfindbase.ui
-)
+SET(spell_SRCS_COMMON spell.cpp
+                      spellcfg.cpp
+                      speller.cpp
+                      spellhighlight.cpp)
+SET(spell_SRCS_WIN32  spellfind.cpp)
 
-SET(spell_HDRS
-        spell.h
-        spellcfg.h
-        speller.h
-        spellhighlight.h
-)
+SET(spell_UICS_COMMON spellcfgbase.ui
+                      spellfindbase.ui)
 
-IF(WIN32)
-  SET(spell_SRCS
-          ${spell_SRCS}
-          spellfind.cpp
-  )
-  SET(spell_HDRS
-          ${spell_HDRS}
-          spellfind.h
-  )
-ENDIF(WIN32)
-
-SET(spell_MESSAGE_SOURCES  ${spell_SRCS}  ${spell_UICS})
-IF(NOT WIN32)
-  SET(spell_MESSAGE_SOURCES ${spell_MESSAGE_SOURCES} spellfind.cpp)
-ENDIF(NOT WIN32)
-SET(spell_MESSAGE_SOURCES  ${spell_MESSAGE_SOURCES}  PARENT_SCOPE)
+SET(spell_HDRS_COMMON spell.h
+                      spellcfg.h
+                      speller.h
+                      spellhighlight.h)
+SET(spell_HDRS_WIN32  spellfind.h)
 
 IF(ASPELL_FOUND AND NOT ENABLE_KDE3)
 
@@ -40,8 +21,6 @@ IF(ASPELL_FOUND AND NOT ENABLE_KDE3)
     # spell library #
     #################
 
-
-    
     SET(spell_LIBS
             ${ASPELL_LIBRARIES}
     )
@@ -57,4 +36,8 @@ ELSE(ASPELL_FOUND AND NOT ENABLE_KDE3)
   ELSE(ENABLE_KDE3)
     MESSAGE(STATUS "Cannot build spell plugin because aspell is missing on your system")
   ENDIF(ENABLE_KDE3)
+
+  # Adding plugin for update-messages and make dist purposes
+  SET(spell_PLUGIN_FORBIDDEN 1)
+  SIM_ADD_PLUGIN(spell)
 ENDIF(ASPELL_FOUND AND NOT ENABLE_KDE3)
