--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -1,25 +1,20 @@
 ###################
 # weather library #
 ###################
-SET(weather_SRCS
-        weather.cpp
-        weathercfg.cpp
-        wifacecfg.cpp
-)
 
-SET(weather_HDRS
-        weather.h
-        weathercfg.h
-        wifacecfg.h
-)
+SET(weather_PLATFORMS COMMON)
 
-SET(weather_UICS
-        weathercfgbase.ui
-        wifacecfgbase.ui
-)
+SET(weather_SRCS_COMMON weather.cpp
+                        weathercfg.cpp
+                        wifacecfg.cpp)
 
-SET(weather_MESSAGE_SOURCES  ${weather_SRCS}  ${weather_UICS}  PARENT_SCOPE)
+SET(weather_HDRS_COMMON weather.h
+                        weathercfg.h
+                        wifacecfg.h)
 
-ADD_JISP_ARCHIVE(jisp weather.jisp weather_SRCS)
+SET(weather_UICS_COMMON weathercfgbase.ui
+                        wifacecfgbase.ui)
+
+ADD_JISP_ARCHIVE(jisp weather.jisp weather_MEDIA_COMMON)
 
 SIM_ADD_PLUGIN(weather)
