--- a/trunk/plugins/windock/CMakeLists.txt
+++ b/trunk/plugins/windock/CMakeLists.txt
@@ -1,12 +1,8 @@
-SET(windock_SRCS
-    windock.cpp
-)
+SET(windock_PLATFORMS WIN32)
 
-SET(windock_HDRS
-    windock.h
-)
+SET(windock_SRCS_WIN32 windock.cpp)
 
-SET(windock_MESSAGE_SOURCES  ${windock_SRCS}  ${windock_UICS}  PARENT_SCOPE)
+SET(windock_HDRS_WIN32 windock.h)
 
 IF(WIN32)
     ###################
@@ -19,4 +15,8 @@ IF(WIN32)
     SIM_ADD_PLUGIN(windock)
 ELSE(WIN32)
     MESSAGE(STATUS "Windock plugin can only be used on windows")
+
+    # Adding plugin for make dist and update-messages purposes
+    SET(windock_PLUGIN_FORBIDDEN 1)
+    SIM_ADD_PLUGIN(windock)
 ENDIF(WIN32)
