--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -1,35 +1,28 @@
 #################
 # yahoo library #
 #################
-SET(yahoo_SRCS
-    crypt.cpp
-    yahoo.cpp
-    yahooauth.cpp
-    yahoocfg.cpp
-    yahooclient.cpp
-    yahoofiletransfer.cpp
-    yahoohttp.cpp
-    yahooinfo.cpp
-    yahoosearch.cpp
-    yahootransformtables.c
-)
+SET(yahoo_PLATFORMS COMMON)
 
-SET(yahoo_HDRS
-    yahoo.h
-    yahoocfg.h
-    yahooclient.h
-    yahooinfo.h
-    yahoosearch.h
-)
+SET(yahoo_SRCS_COMMON crypt.cpp
+                      yahoo.cpp
+                      yahooauth.cpp
+                      yahoocfg.cpp
+                      yahooclient.cpp
+                      yahoofiletransfer.cpp
+                      yahoohttp.cpp
+                      yahooinfo.cpp
+                      yahoosearch.cpp
+                      yahootransformtables.c)
 
-SET(yahoo_UICS
-    yahoocfgbase.ui
-    yahooinfobase.ui
-    yahoosearchbase.ui
-)
+SET(yahoo_HDRS_COMMON yahoo.h
+                      yahoocfg.h
+                      yahooclient.h
+                      yahooinfo.h
+                      yahoosearch.h)
 
-SET(yahoo_MESSAGE_SOURCES  ${yahoo_SRCS}  ${yahoo_UICS}  PARENT_SCOPE)
-
+SET(yahoo_UICS_COMMON yahoocfgbase.ui
+                      yahooinfobase.ui
+                      yahoosearchbase.ui)
 
 if(OPENSSL_FOUND)
     INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
@@ -38,4 +31,8 @@ if(OPENSSL_FOUND)
     TARGET_LINK_LIBRARIES(yahoo ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 else(OPENSSL_FOUND)
     MESSAGE(STATUS "OpenSSL library not found, yahoo plugin disabled")
+    # Adding plugin for make dist and update-messages purposes
+    SET(yahoo_PLUGIN_FORBIDDEN 1)
+    SIM_ADD_PLUGIN(yahoo)
+
 endif(OPENSSL_FOUND)
