--- a/trunk/plugins/zodiak/CMakeLists.txt
+++ b/trunk/plugins/zodiak/CMakeLists.txt
@@ -1,13 +1,10 @@
 ##################
 # zodiak library #
 ##################
-SET(zodiak_SRCS
-        zodiak.cpp
-)
+SET(zodiak_PLATFORMS COMMON)
 
-SET(zodiak_HDRS
-        zodiak.h
-)
-SET(zodiak_MESSAGE_SOURCES  ${zodiak_SRCS}  ${zodiak_UICS}  PARENT_SCOPE)
+SET(zodiak_SRCS_COMMON zodiak.cpp)
+
+SET(zodiak_HDRS_COMMON zodiak.h)
 
 SIM_ADD_PLUGIN(zodiak)
